Updated main page animation to include featured. Added a global z-index class to ensure the hamburger-based menu is alway over the rest of the elements. Removed "temp" js and class

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -310,6 +310,10 @@ a {
   min-height: 100svh;
 }
 
+.site-main > :not(.bg-layers) {
+  z-index: 10;
+}
+
 .temp {
   /* spacing: one gutter-h above header, one below image */
   padding-top: var(--gutter-h);
@@ -1043,9 +1047,8 @@ a {
     align-items: center;
     justify-content: center;
     gap: var(--gutter);
-    width: 100vw;
-    height: 100vh;
-    z-index: 1000;
+    z-index: 2000;
+    margin: 0;
   }
   .is-nav-open .nav__inner {
     flex-direction: row;
@@ -1072,7 +1075,7 @@ a {
   padding: 8px;
   border-radius: 10%;
   cursor: pointer;
-  z-index: 1001;
+  z-index: 2100;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1314,20 +1317,19 @@ a {
     position: relative;
   }
 }
-.is-nav-open .hero__title,
-.is-nav-open .hero__subtitle,
-.is-nav-open .hero__explore,
-.is-nav-open .hero__arrow {
-  opacity: 0;
-  transform: translateY(10px);
-  transition: none !important;
+.is-nav-open .topbar {
+  margin: 0;
+  height: 100svh !important;
 }
 
 .is-nav-open .hero__title,
 .is-nav-open .hero__subtitle,
 .is-nav-open .hero__explore,
-.is-nav-open .hero__arrow {
+.is-nav-open .hero__arrow,
+.is-nav-open .featured {
   opacity: 0 !important;
+  transform: translateY(10px);
+  transition: none !important;
 }
 
 /* Motion reduction */
