--- a/public/assets/scss/components/_hamburger.scss
+++ b/public/assets/scss/components/_hamburger.scss
@@ -10,7 +10,7 @@
     padding: 8px;
     border-radius: 10%;
     cursor: pointer;
-    z-index: 1001;
+    z-index: 2100;
     display: flex;
     flex-direction: column;
     justify-content: center;
