--- a/public/assets/scss/utilities/_animations.scss
+++ b/public/assets/scss/utilities/_animations.scss
@@ -1,15 +1,14 @@
-.is-nav-open .hero__title,
-.is-nav-open .hero__subtitle,
-.is-nav-open .hero__explore,
-.is-nav-open .hero__arrow {
-  opacity: 0;
-  transform: translateY(10px);
-  transition: none !important;
+.is-nav-open .topbar {
+  margin: 0;
+  height: 100svh !important;
 }
 
 .is-nav-open .hero__title,
 .is-nav-open .hero__subtitle,
 .is-nav-open .hero__explore,
-.is-nav-open .hero__arrow {
+.is-nav-open .hero__arrow,
+.is-nav-open .featured {
   opacity: 0 !important;
+  transform: translateY(10px);
+  transition: none !important;
 }
